# IMG_SEG_PRJ

./: README.md  pyproject.toml
test_file/: goit_GIS분류.ipynb  goit_이미지분류_GIS업무.ipynb  goit_이미지분할_GIS업무.ipynb
