[tool.poetry]
name = "cloudseg-poc"
version = "0.1.0"
description = "PoC for cloud segmentation with 38-Cloud dataset using U-Net and other models"
authors = ["Min Hyeok <minh8920@goit.ac.kr>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# Deep learning
torch = ">=2.1,<2.3"
torchvision = ">=0.16,<0.17"
segmentation-models-pytorch = "0.3.3"

# Data & augmentation
albumentations = ">=1.4"
opencv-python = ">=4.9"
numpy = ">=1.24"
pillow = ">=10.3"

# Utils
tqdm = ">=4.66"
pyyaml = ">=6.0"
scikit-learn = ">=1.4"
matplotlib = ">=3.8"

# Geospatial (조사구 단계 대비, 선택적)
rasterio = "^1.3"
geopandas = "^0.14"
shapely = "^2.0"
pyproj = "^3.6"

[tool.poetry.group.dev.dependencies]
black = "^24.3"
ruff = "^0.4"
ipykernel = "^6.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
